# wave-sickle

./: CHANGELOG.md  Cargo.toml  README.md
src/: all_pass.rs  all_pass_delay.rs  envelope.rs  helpers.rs  lib.rs  main.rs  parameters.rs  sample_loader.rs  sample_player.rs  slaughter.rs  state_variable_filter.rs  synth_device.rs
