[package]
name         = "wave_sickle"
version      = "0.1.0"
authors      = ["Weird Constructor <weirdconstructor@gmail.com>"]
license      = "GPL-3.0-or-later"
edition      = "2018"
description  = "wave-sickle is a port attempt of WaveSabre (by logicoma) to Rust"
repository   = "https://github.com/WeirdConstructor/wave-sickle"
readme       = "README.md"
keywords     = ["audio", "sound", "synth", "synthesizer"]
categories   = ["audio", "multimedia"]
exclude      = ["res/*"]

[dependencies]
cpal = "0.10.0"
hound = "3.4.0"
wctr_signal_ops = { path = "../wctr-signal-ops" }
